# KUKA-ROS2

./: CHANGELOG.md  README.md
kuka_2f140_moveit/: .setup_assistant
kuka_2f140_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kr70_r2100.srdf  kr70_r2100.urdf.xacro  ros2_controllers.yaml
kuka_2f140_moveit/launch/: moveit_rviz.launch.py  spawn_controllers.launch.py
kuka_2f85_moveit/config/: kr70_r2100.srdf  kr70_r2100.urdf.xacro
kuka_2f85_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
kuka_control/: package.xml  setup.cfg  setup.py
kuka_control/control_actions/: CMakeLists.txt  package.xml
kuka_control/control_scripts/: CMakeLists.txt  package.xml
kuka_control/control_scripts/include/control_scripts/: move_gripper.h  move_joints.h  move_linear.h  move_xyzw.h
kuka_control/control_scripts/scripts/: action_execution.py
kuka_control/control_scripts/src/: move_gripper.cpp  move_joints.cpp  move_linear.cpp  move_robot.cpp  move_xyzw.cpp
kuka_control/kuka_control/: gripper_control.py  motion_planning.py
kuka_description/: CMakeLists.txt  package.xml
kuka_description/urdf/: ign_plugins.xacro  kr70_r2100.urdf.xacro  kr70_r2100_2f140.urdf.xacro  kr70_r2100_2f140_ros2_control.xacro  kr70_r2100_2f85.urdf.xacro  (+3 more)
kuka_gazebo/: CMakeLists.txt  package.xml
kuka_moveit/: .setup_assistant  package.xml
kuka_robotiq_2f_140_moveit/: .setup_assistant  CMakeLists.txt  package.xml
kuka_robotiq_2f_85_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+100 files in other folders)
